css/style.css
/* google font css */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');



/* ---------- common css start ---------- */
*{
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}
/* ---------- common css end ---------- */

/* ---------- nav css start ---------- */
.nav-link{
    font-size: 14px;
}
.btn-tomato{
    color: white;
    background-color: tomato;
    border: 2px solid tomato;
}
.btn-tomato:hover{
    color: tomato;
    background-color: transparent;
    border: 2px solid tomato;
}
/* ---------- nav css end ---------- */

/* ---------- vertical card css start ---------- */
.hcard-icon{
    color: tomato;
}
.hcard-detail h6{
    font-size: 13px;
    font-weight: 600;
}
.hcard-detail p{
    font-size: 13px;
    color: #8a8a8a;
    text-align: justify;
}
/* ---------- vertical card css end ---------- */


/* ---------- card css start ---------- */
.card{
    box-shadow: 0 0 35px -5px rgba(0, 0, 0, 0.3);
}
.card-link{
    text-decoration: none;
    position: relative;
    overflow: hidden;
}
.card-img-top{
    transform: scale(1);
    transition: transform .2s linear;
}
.card-img-top:hover{
    transform: scale(1.05);
    transition: transform .3s linear;
}
/* ---------- card css end ---------- */

